--- a/MVC/Views/Dashboard/Index.cshtml
+++ b/MVC/Views/Dashboard/Index.cshtml
@@ -3,7 +3,24 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h1>Welcome and Good Morning,Motivity Labs! </h1>
-<h1>Select your Navigation link to proceed</h1>
+<style>
+    div {
+        text-align: center;
+        /*//padding:20px;
+       // margin-top:50px;*/
+        text-decoration-color:Black;
+        background-color:wheat;
+    }
+    p{
+        text-align:center;
+    }
+</style>
+<div>
+@*<h1>Welcome and Good Morning,Motivity Labs! </h1>
+<h1>Select your Navigation link to proceed</h1>*@
+<p>
+    Welcome and Good Morning,Motivity Labs!
+    Select your Navigation link to proceed
+</p>
+</div>
 
