--- a/MVC/Views/Complaint/Details.cshtml
+++ b/MVC/Views/Complaint/Details.cshtml
@@ -87,7 +87,7 @@
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+        <a asp-action="GetComplaints">Back to List</a>
 </div>
 </body>
 </html>
