--- a/MVC/Views/Complaint/GetByEmployeeId.cshtml
+++ b/MVC/Views/Complaint/GetByEmployeeId.cshtml
@@ -1,17 +1,12 @@
 ﻿@model IEnumerable<MVC.Models.ComplientBox>
 
 @{
-    Layout = null;
+    ViewData["Title"] = "GetByEmployeeId";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+<h1>GetByEmployeeId</h1>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>GetComplaints</title>
-</head>
-<body>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -36,7 +31,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Resolution)
             </th>
-           @* <th>
+            <th>
                 @Html.DisplayNameFor(model => model.ActiveFlag)
             </th>
             <th>
@@ -50,7 +45,7 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ModifiedDate)
-            </th>*@
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -75,7 +70,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Resolution)
             </td>
-           @* <td>
+            <td>
                 @Html.DisplayFor(modelItem => item.ActiveFlag)
             </td>
             <td>
@@ -89,17 +84,13 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ModifiedDate)
-            </td>*@
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.ComplientId }) |
-                @Html.ActionLink("Details", "Details", new {  id=item.ComplientId }) |
-                        @Html.ActionLink("Details", "GetByEmployeeId", new {  id=item.EmployeeId }) |
-
-                @Html.ActionLink("Delete", "Delete", new { id=item.ComplientId })
             </td>
+           @* <td>
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            </td>*@
         </tr>
 }
     </tbody>
 </table>
-</body>
-</html>
