--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -9,7 +9,10 @@
         padding-top:30px;
 }
 </style>
-<h3>Login User</h3>
+<h3>user Motivity Microsoft authenticatio</h3>
+ <li class="nav-item">
+   <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">Register</a>
+ </li>
 <hr />
 <img src=" C:\Users\Ayesha Tabassum\Desktop\Traning\ComplaintMonitoringSystem\MVC\Views\Home\eazeworkpic.png" />
 <div class="row">
@@ -30,9 +33,7 @@
             <br />
             <div class="from-group">
                 <input type="submit" value="Login" class="btn btn-primary" />
-                 <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Complaint" asp-action="Register">Register</a>
-            </li>
+                
             </div>
            
             <label>@Html.Raw(ViewBag.Message)</label>
