--- a/MVC/Views/Home/Register.cshtml
+++ b/MVC/Views/Home/Register.cshtml
@@ -2,9 +2,9 @@
 
 @{
     ViewData["Title"] = "Register";
+    Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
 
-<h1>Register</h1>
 
 <h4>Register</h4>
 <hr />
