--- a/MVC/Views/Complaint/Create.cshtml
+++ b/MVC/Views/Complaint/Create.cshtml
@@ -76,6 +76,6 @@
 </div>
 
 <div>
-    <a asp-action="EmployeeComplients">Back to List</a>
+    <a asp-action="GetComplaints">Back to List</a>
 </div>
 
