--- a/MVC/Views/Home/Register.cshtml
+++ b/MVC/Views/Home/Register.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<h4>Register</h4>
+<h1>Register</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -40,6 +40,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="LoginUser">Back to List</a>
 </div>
 
