--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Complaint Monitoring System Without Organization</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Complaint Monitoring System</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,6 +29,12 @@
                     <ul class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Complaint" asp-action="Logoff" style="float:right;">Logoff</a>
                     </ul>
+                   @* <ul>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            if(
+                        }
+                    </ul>*@
 
                 </div>
             </div>
