--- a/MVC/Views/Complaint/Create.cshtml
+++ b/MVC/Views/Complaint/Create.cshtml
@@ -13,11 +13,11 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+           @* <div class="form-group">
                 <label asp-for="ComplientId" class="control-label"></label>
                 <input asp-for="ComplientId" class="form-control" />
                 <span asp-validation-for="ComplientId" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="EmployeeId" class="control-label"></label>
                 <input asp-for="EmployeeId" class="form-control" />
@@ -28,7 +28,7 @@
                 <input asp-for="Issue" class="form-control" />
                 <span asp-validation-for="Issue" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           @* <div class="form-group">
                 <label asp-for="ComplientRaised" class="control-label"></label>
                 <input asp-for="ComplientRaised" class="form-control" />
                 <span asp-validation-for="ComplientRaised" class="text-danger"></span>
@@ -67,7 +67,7 @@
                 <label asp-for="ModifiedDate" class="control-label"></label>
                 <input asp-for="ModifiedDate" class="form-control" />
                 <span asp-validation-for="ModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
