--- a/MVC/Views/Complaint/Create.cshtml
+++ b/MVC/Views/Complaint/Create.cshtml
@@ -68,14 +68,16 @@
                 <input asp-for="ModifiedDate" class="form-control" />
                 <span asp-validation-for="ModifiedDate" class="text-danger"></span>
             </div>*@
+            <br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="GetComplaints">Back to List</a>
+    <a asp-action="EmployeeComplients">Back to List</a>
 </div>
 
