--- a/MVC/Views/Complaint/GetByEmployeeId.cshtml
+++ b/MVC/Views/Complaint/GetByEmployeeId.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>GetByEmployeeId</h1>
+<h1>Complient Details</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,9 +13,9 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
+           @* <th>
                 @Html.DisplayNameFor(model => model.ComplientId)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.EmployeeId)
             </th>
@@ -31,7 +31,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Resolution)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.ActiveFlag)
             </th>
             <th>
@@ -45,16 +45,16 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ModifiedDate)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.ComplientId)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.EmployeeId)
             </td>
@@ -70,7 +70,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Resolution)
             </td>
-            <td>
+           @* <td>
                 @Html.DisplayFor(modelItem => item.ActiveFlag)
             </td>
             <td>
@@ -84,7 +84,7 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ModifiedDate)
-            </td>
+            </td>*@
            @* <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
