--- a/MVC/Views/Complaint/GetComplaints.cshtml
+++ b/MVC/Views/Complaint/GetComplaints.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MVC.Models.ComplientBox>
-
 @{
-    Layout = null;
+    ViewData["Title"] = "GetComplaintCount";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -10,6 +10,32 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>GetComplaints</title>
+    <style>
+
+        .table, th, tr, td {
+                border: 1px solid rgb(78, 36, 36);
+
+            /* border-collapse: collapse; */
+               width: 40px;
+               margin-left: 140px;
+
+        }
+
+       
+
+           tr {
+                
+                border-radius: 20px;
+
+        }
+
+           table {
+                margin-left: 28%;
+
+        }
+
+
+    </style>
 </head>
 <body>
 @*<p>
