--- a/MVC/Views/Complaint/Details.cshtml
+++ b/MVC/Views/Complaint/Details.cshtml
@@ -1,49 +1,13 @@
 ﻿@model MVC.Models.ComplientBox
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-    <style>
-        .table, dd, tr, dt {
-                border: 1px solid rgb(78, 36, 36);
-
-            /* border-collapse: collapse; */
-               width: 25%;
-               margin-left: 200px;
-
-        }
-
-           th {
-                background-color: rgb(86, 177, 251);
-
-        }
-
-
-
-
-           tr {
-                background-color: rgb(131, 127, 187);
-                border-radius: 20px;
-
-        }
-
-           table {
-                margin-left: 28%;
-
-        }
-    </style>
-</head>
-<body>
+<h1>Details</h1>
 
 <div>
-    <h4>Complients</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -82,7 +46,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Resolution)
         </dd>
-        @*<dt class = "col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ActiveFlag)
         </dt>
         <dd class = "col-sm-10">
@@ -111,12 +75,9 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ModifiedDate)
-        </dd>*@
+        </dd>
     </dl>
 </div>
 <div>
-@*    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-*@        <a asp-action="GetComplaints">Back to List</a>
+    <a asp-action="GetComplaints">Back to List</a>
 </div>
-</body>
-</html>
