--- a/MVC/Views/Complaint/Register.cshtml
+++ b/MVC/Views/Complaint/Register.cshtml
@@ -2,10 +2,8 @@
 
 @{
     ViewData["Title"] = "Register";
-    Layout = "~/Views/Shared/_HomeLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-
 
 <section class="vh-100" style="background-color: #eee;">
     <div class="container h-100">
@@ -18,7 +16,7 @@
 
                                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-                                <form class="mx-1 mx-md-4">
+                                 <form asp-action="Register">
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
@@ -32,18 +30,18 @@
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                           <label asp-for="Email" class="control-label"></label>
-                                          <input asp-for="Email" class="form-control" />
-                                           <span asp-validation-for="Email" class="text-danger"></span>
+                                            <label asp-for="Email" class="control-label"></label>
+                                            <input asp-for="Email" class="form-control" />
+                                            <span asp-validation-for="Email" class="text-danger"></span>
                                         </div>
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                             <label asp-for="Password" class="control-label"></label>
-                                             <input asp-for="Password" class="form-control" />
-                                             <span asp-validation-for="Password" class="text-danger"></span>
+                                            <label asp-for="Password" class="control-label"></label>
+                                            <input asp-for="Password" class="form-control" />
+                                            <span asp-validation-for="Password" class="text-danger"></span>
                                         </div>
                                     </div>
 
