--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
                                         Login
                                     </button>
                                     <p class="small fw-bold mt-2 pt-1 mb-0">
-                            Don't have an account?    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">Register</a>
+                            Don't have an account?    <a class="nav-link text-dark" asp-area="" asp-controller="Complaint" asp-action="Register">Register</a>
 
                                     </p>
                                 </div>
