--- a/MVC/Views/Complaint/Register.cshtml
+++ b/MVC/Views/Complaint/Register.cshtml
@@ -1,8 +1,8 @@
 ﻿@model MVC.Models.Register
 
 @{
-    ViewData["Title"] = "Register";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Home Page";
+    Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
 
 <section class="vh-100" style="background-color: #eee;">
