--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                                 </div>
 
                                 <div class="divider d-flex align-items-center my-4">
-                                    <p class="text-center fw-bold mx-3 mb-0">Welcome Users</p>
+                        <p class="text-center fw-bold mx-3 mb-0">Login to your EazeWork account</p>
                                 </div>
 
                                 <!-- Email input -->
