--- a/MVC/Views/Complaint/EmployeeComplients.cshtml
+++ b/MVC/Views/Complaint/EmployeeComplients.cshtml
@@ -7,9 +7,9 @@
 
 <h1>Employee Complaints</h1>
 
-@*<p>
-    <a asp-action="Create">Create New</a>
-</p>*@
+<p>
+    <a asp-action="create">create new</a>
+</p>
 <table class="table">
     <thead>
         <tr>
