--- a/MVC/Views/Complaint/Register.cshtml
+++ b/MVC/Views/Complaint/Register.cshtml
@@ -4,7 +4,12 @@
     ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
-
+@if (TempData["AlertMessage"] != null)
+{
+    <div class="alert alert-success">
+        <strong>Success !</strong>@TempData["AlerrtMessage"]
+    </div>
+}
 <section class="vh-100" style="background-color: #eee;">
     <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -39,36 +44,41 @@
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <label asp-for="Password" class="control-label"></label>
-                                            <input asp-for="Password" class="form-control" />
+                                            <label asp-for="Password"  class="control-label"></label>
+                                            <input asp-for="Password" type="password" class="form-control" />
                                             <span asp-validation-for="Password" class="text-danger"></span>
                                         </div>
                                     </div>
-
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <label asp-for="Role" class="control-label"></label>
-                                            <input asp-for="Role" class="form-control" />
+                                            <select asp-for="Role" class="form-control" />
+                                            <option></option>
+                                            <option>Admin</option>
+                                            <option>Employee</option>
                                             <span asp-validation-for="Role" class="text-danger"></span>
                                         </div>
                                     </div>
-
                                     <div class="form-check d-flex justify-content-center mb-5">
+                                      
                                         <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
                                         <label class="form-check-label" for="form2Example3">
-                                            I agree all statements in <a href="#!">Terms of service</a>
+                                            I agree all statements in Terms of services@* <a href="#!">Terms of service</a>*@
                                         </label>
                                     </div>
 
                                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                                         <input type="submit" value="Create" class="btn btn-primary" />
                                     </div>
+                                    
                                     <div>
                                         <p class="small fw-bold mt-2 pt-1 mb-0">
                                             already register click hear to    <a class="nav-link text-dark" asp-area="" asp-controller="Complaint" asp-action="LoginUser">Login</a>
                                         </p>
+
                                     </div>
+                                   
                                 </form>
 
                             </div>
