--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                         <form asp-action="LoginUser" asp-controller="Complaint">
                             <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-                                   
+
                                 </div>
 
                                 <div class="divider d-flex align-items-center my-4">
@@ -23,7 +23,7 @@
 
                                 <!-- Email input -->
                                 <div class="from-group">
-@*                <label asp-for="Username" class="control-label">Username</label>
+                        @*                <label asp-for="Username" class="control-label">Username</label>
 *@                <input asp-for="Username" placeholder="Username" class="from-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
@@ -32,13 +32,13 @@
                                 <!-- Password input -->
                     <div class="from-group">
                         @*                <label asp-for="Password" class="control-label">Password</label>
-                        *@                <input asp-for="Password" placeholder="Password" class="from-control" />
+                        *@                <input asp-for="Password" type="password" placeholder="Password" class="from-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
 
                                 <div class="d-flex justify-content-between align-items-center">
                                     <!-- Checkbox -->
-                                   @* <div class="form-check mb-0">
+                        @* <div class="form-check mb-0">
                                         <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
                                         <label class="form-check-label" for="form2Example3">
                                             Remember me
@@ -62,13 +62,13 @@
                         </div>
                     </div>
                 </div>
-              
+
                 </div>
             </section>
-   
-            
-               
+
+
+
 <label>@Html.Raw(ViewBag.Message)</label>
-           
-        
+
+
 
