--- a/MVC/Views/Complaint/Register.cshtml
+++ b/MVC/Views/Complaint/Register.cshtml
@@ -10,6 +10,7 @@
         <strong>Success !</strong>@TempData["AlerrtMessage"]
     </div>
 }
+
 <section class="vh-100" style="background-color: #eee;">
     <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -20,7 +21,13 @@
                             <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
                                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
-
+                                <div class="alert-danger">
+                        @if (ViewData["LoginFlag"] != null)
+                        {
+                            @ViewData["LoginFlag"]
+                            ;
+                        }
+                    </div>
                                  <form asp-action="Register">
 
                                     <div class="d-flex flex-row align-items-center mb-4">
