--- a/MVC/Views/Complaint/EmployeeComplients.cshtml
+++ b/MVC/Views/Complaint/EmployeeComplients.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "EmployeeComplients";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_HomeLayoutEmployee.cshtml";
 }
 
 <h1>Employee Complaints</h1>
