--- a/MVC/Views/Complaint/GetByEmployeeId.cshtml
+++ b/MVC/Views/Complaint/GetByEmployeeId.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "GetByEmployeeId";
-    Layout = "~/Views/Shared/_HomeLayoutEmployee.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Complient Details</h1>
