--- a/MVC/Views/Complaint/Create.cshtml
+++ b/MVC/Views/Complaint/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_HomeLayoutEmployee.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Raise a Complaint </h1>
